--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -22,7 +22,13 @@
     background-color: rgb(219, 200, 200);
    display: flex;
    align-items: flex-end;
+   position:relative;
+   
+   background-size:  100% auto;
+   background-position: center; 
 
+   
+ 
 }
 .description-box{
     width: 30%;
@@ -32,7 +38,7 @@
     text-align: start;
     margin-left: 5%;
     margin-bottom: 1.5%;
-   
+   color: white;
 }
 .watch-later{
     width: 40%;
