--- a/src/Components/Moviecards/Moviecards.css
+++ b/src/Components/Moviecards/Moviecards.css
@@ -1,37 +1,23 @@
-.row {
-    margin-top: 0;
-    min-height: 80vh;
-    height: auto;
-    margin-left: 20px;
-    color:  #111827;;
-    display: flex;
-    justify-content: center;
-    background-color: rgb(238, 237, 237);
-    padding: 0;
-    margin: 0;
-    line-height: 0px;
-}
-.row-post{
-display: flex;
-flex-wrap: wrap;
-justify-content: space-between; /* Adjust as needed */
-
-}
-.posters {
-    width: 90%;
+.movie-poster {
+    width: 100%;
+    min-height: 100vh;
     display: flex;
     flex-wrap: wrap; /* Allow items to wrap to the next line */
     text-align: start;
     line-height: 0;
+ margin-top: 20px;
+ background-color:rgb(238, 237, 237);
+ align-self: center;
+margin-left: 0;
+ 
     
 }
 .posters h1{
     color: #111827;
 }
 
-.movie-card {
-    margin-top: 4%;
-    width: calc(25% - 50px); 
+.fav-movie-card {
+    width: calc(25% - 40px);
     border-radius: 12px;
     overflow: hidden;
     display: flex;
@@ -39,6 +25,7 @@ justify-content: space-between; /* Adjust as needed */
     justify-content: space-between;
     height: 450px; 
     box-sizing: border-box; 
+    margin-left: 20px;
 }
 
 .banner {
@@ -89,18 +76,3 @@ justify-content: space-between; /* Adjust as needed */
 }
 
 
-
-
-
-
-
-@media (max-width: 500px) {
-    .posters {
-        flex-direction: column;
-    }
-
-    .movie-card {
-        width: 100%; 
-        height: auto; 
-    }
-}
